--- a/resume.css
+++ b/resume.css
@@ -1,11 +1,24 @@
 .heading{
   background-color: #003483;
-  width: 100%;
   height: 100%;
   padding: 10px;
 }
+.ax{
+  position: relative;
+  bottom: 2px;
+}
+
+.info{
+  margin-left: 20px;
+}
+.left{
+	width: 32%;
+
+	position: absolute;
+	left: 0;
+}
 .topic{
-  width: 30%;
+  width: 32%;
   height: 100%;
   position: absolute;
   left: 10px;
@@ -15,8 +28,7 @@
 
 }
 .right{
-	width: 70%;
-	height: 100%;
+	width: 68%;
 	position: absolute;
 	right: 0;
 	border-left: 1px solid gray;
